# networkx

./: .gitignore  REPO_STRATEGY.md
project/: README.md  intake  pyproject.toml  requirements.txt
project/docs/: README.md
project/docs/decisions/: DECISION_LOG.md
project/docs/methodology/: CORE_QUESTIONNAIRE.md  DATA_HANDOFF_MATRIX.md  FIELD_VALUE_DICTIONARY.md  HUMAN_INTERACTION_MODEL.md  IMPLEMENTATION_MAPPING.md  INTAKE_MASTER_NOTE.md  INTAKE_OPERATOR_GUIDE.md  MODULE_MAP.md  NETWORK_VOLUME_STRUCTURE.md  QUESTIONNAIRE_WORKFLOW.md  ROLE_MAP.md
project/docs/plans/: PLAN_APP_DEPENDENCY_DECOUPLING.md  PLAN_APP_REPO_EXTRACTION.md  PLAN_CF2_BOOTSTRAP_CLADE_FOR_MULTI_MODEL_TRIANGULATION.md  PLAN_CF2_BOOTSTRAP_CODEX_FOR_MULTI_MODEL_TRIANGULATION.md  PLAN_CF2_BOOTSTRAP_FINAL.md  PLAN_HUMAN_INTAKE_LAYER.md  PLAN_HUMAN_INTAKE_LAYER_V1.md  PLAN_POST_V1_INTAKE_BOOTSTRAP.md
project/docs/reviews/: ARCHITECTURE_REVIEW_2026-04-01.md  ARCHITECTURE_REVIEW_WAVE1_FOLLOWUP_2026-04-01.md  CLAUDE_REVIEW_2026-04-03_SLICE3_FOLLOWUP.md  CLAUDE_REVIEW_BRIEF_2026-04-01_WAVE1.md  CLAUDE_REVIEW_BRIEF_2026-04-03_BOOTSTRAP.md  CLAUDE_REVIEW_BRIEF_2026-04-03_SLICE3.md  CLAUDE_REVIEW_BRIEF_2026-04-03_V1_CLOSEOUT.md  CODEX_REVIEW_BRIEF_2026-04-01_WAVE2.md  CODEX_REVIEW_BRIEF_2026-04-02_WAVE2_FINAL.md  SESSION_HANDOFF_2026-04-01_WAVE1.md  V0_RELEASE_2026-04-02.md  V1_CLOSEOUT_2026-04-03.md
project/examples/sample_object_01/: questionnaire.yaml  (+2 more)
project/src/: model_utils.py  run_pipeline.py
project/tests/: conftest.py  rehearse_extracted_install.py  test_annex_activation.py  test_canonical_intake_internal_imports.py  test_canonical_internal_imports.py  test_canonical_namespace_imports.py  test_canonical_test_imports.py  test_compile_graphs.py  test_compile_intake.py  test_compiler_reports_promotion.py  test_cross_graph.py  test_extraction_rehearsal.py  test_generate_intake.py  test_inference_rules.py  test_init_workspace.py  test_intake_branch_gates.py  test_intake_evidence.py  test_intake_happy_path_golden.py  test_intake_launcher.py  test_intake_preview.py  test_intake_promotion.py  test_intake_review.py  test_legacy_install_surface_removed.py  test_model_utils_promotion.py  test_pipeline_e2e.py  test_review_fixes.py  test_role_assignments.py  test_run_pipeline_manifest.py  test_run_pipeline_promotion.py  test_validators.py  test_validators_promotion.py  test_workspace_manifest.py  test_workspace_snapshot.py
(+121 files in other folders)
