[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-methodology-sandbox"
version = "0.1.0"
description = "Intake workflow, requirements pipeline, and review tooling under project/."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "openpyxl>=3.1",
    "jsonschema>=4.23",
    # The product currently depends on the same NetworkX baseline as upstream/main.
    # This is intentionally pinned as a VCS dependency until compatibility with a
    # published release is proved during dependency decoupling.
    "networkx @ git+https://github.com/networkx/networkx.git@61d209875422f5c40600d2d425bd92fac9cc1b02",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["network_methodology_sandbox*"]
